2019-01-30 Jana Mendrok  <jana.mendrok@gmail.co>

	* arts-2-2-65
	
	* src/m_abs.cc (abs_linesReadFromHitran): Make it work with HITRAN2016.par.

2017-12-05  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-64

	* AUTHORS: Update email addresses.

2017-11-08  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-63

	* doc/uguide/development.tex: Update arts-dev list address.

2017-11-08  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-62
	
	* README: Updated ARTS URL. Reported by Jana.

2016-09-08 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-2-61
	
	* src/m_disort.cc, m_cloudbox.cc, methods.cc (cloudboxSetFullAtm):
	Bugfix: ensure atm_dim==1 (reported by Patrick). Moved the WSM deinition
	(former	cloudboxSetDisort) from m_disort to m_cloudbox.

2016-09-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-2-60
	
	* CMakeLists.txt, config.h.cmake,
	  src/CMakeLists.txt
	  src/m_disort.cc, main.cc, methods.cc,
	  3rdparty/CMakeLists.txt,
	  controlfiles/CMakeLists.txt,
	  controlfiles/artscomponents/disort/, TestDISORT.arts, scat_data_disort.xml:
	Removed (buggy) Disort interface and testcase. Refering to ARTS2.3 instead.

2016-07-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-59
	
	* cmake/modules/FindNetCDF.cmake:

	Remove unused library dependency on netcdf_c++.

2016-02-16 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-2-58
	
	* controlfiles/planetary_toolbox/includes/venus/atmo_venus.arts:
	Typo fix (thanks to Elisa Castelli for pointing out!).
	
2015-12-17  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-57

	* doc/uguide/common.tex:

	Backport changes from arts-2-3-387:

	Add macro \artsserver with ARTS web url.

	Add macro \artsurl to insert a link to a page on the ARTS web server.
	Only needs the subpath as input.

	Add macro \docserver. Makes it easy in the future to switch from the
	trunk to the stable docserver once ARTS is released.

	Change \builtindoc macro to use the \artsserver and \docserver macros.