@@ -1,8 +1,17 @@
+2019-01-31 Jana Mendrok  <jana.mendrok@gmail.co>
+
+	* arts-2-2-66
+	
+	* src/species_data.cc:
+	Update H2O-626 (backward copy from arts-2.3 state) to make arts2.2 work
+	with H2016.
+
 2019-01-30 Jana Mendrok  <jana.mendrok@gmail.co>
 
 	* arts-2-2-65
 	
-	* src/m_abs.cc (abs_linesReadFromHitran): Make it work with HITRAN2016.par.
+	* src/m_abs.cc (abs_linesReadFromHitran):
+	Make it work with HITRAN2016.par.
 
 2017-12-05  Oliver Lemke  <olemke@core-dump.info>
 
